--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -134,10 +134,10 @@
   width: 100%;
   height: 100%;
   background-color: #0f0f1099;
-  transition: opacity 250ms linear, visibility 250ms linear;
 }
 .modal-window {
   position: absolute;
+  z-index: 99999;
   top: 50%;
   left: 50%;
   background-color: #fcfcfc;
@@ -168,6 +168,12 @@
 }
 .modal-btn-icon {
   fill: #fafafa;
+  transition: transform 250ms linear;
+}
+.modal-button:hover .modal-btn-icon,
+.modal-button:focus .modal-btn-icon,
+.modal-button:active .modal-btn-icon {
+  transform: scale(1.2);
 }
 .modal-title {
   font-size: 20px;
