--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,7 +5,7 @@
   top: 32px;
   left: 0;
   width: 100%;
-  z-index: 999;
+  z-index: 9999;
   background-color: transparent;
 }
 
@@ -159,7 +159,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999999999;
+    z-index: 999999;
     width: 100%;
     height: 100%;
     display: flex;
